non-msrv-tests/tests/ui/item.stderr
error: empty `derive_where` found
 --> tests/ui/item.rs:5:1
  |
5 | #[derive_where]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `derive_where` (in Nightly builds, run with -Z macro-backtrace for more info)

error: empty `derive_where` found
 --> tests/ui/item.rs:8:1
  |
8 | #[derive_where()]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `derive_where` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected option syntax
  --> tests/ui/item.rs:11:16
   |
11 | #[derive_where(crate(derive_where_))]
   |                ^^^^^^^^^^^^^^^^^^^^

error: expected path, expected identifier
  --> tests/ui/item.rs:14:24
   |
14 | #[derive_where(crate = "struct Test")]
   |                        ^^^^^^^^^^^^^

error: the `crate` option has to be defined in it's own `#[derive_where(..)` attribute
  --> tests/ui/item.rs:20:16
   |
20 | #[derive_where(crate = "derive_where_", crate = "derive_where_")]
   |                ^^^^^

error: duplicate `crate` option
  --> tests/ui/item.rs:24:16
   |
24 | #[derive_where(crate = "derive_where_")]
   |                ^^^^^^^^^^^^^^^^^^^^^^^

error: no traits found to implement, use `#[derive_where(..)` to specify some
  --> tests/ui/item.rs:28:1
   |
28 | struct OnlyCrate<T>(PhantomData<T>);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unnecessary path qualification, `::derive_where` is used by default
  --> tests/ui/item.rs:30:24
   |
30 | #[derive_where(crate = "::derive_where")]
   |                        ^^^^^^^^^^^^^^^^

error: expected `,`
  --> tests/ui/item.rs:33:24
   |
33 | #[derive_where(Clone; T;)]
   |                        ^

error: expected type to bind to, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> tests/ui/item.rs:36:25
   |
36 | #[derive_where(Clone; T,,)]
   |                         ^

error: expected type to bind to, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> tests/ui/item.rs:39:23
   |
39 | #[derive_where(Clone; where)]
   |                       ^^^^^

error: expected `;` or `,
  --> tests/ui/item.rs:42:22
   |
42 | #[derive_where(Clone Debug)]
   |                      ^^^^^

error: expected `,`
  --> tests/ui/item.rs:45:25
   |
45 | #[derive_where(Clone; T U)]
   |                         ^

error: unexpected option syntax
  --> tests/ui/item.rs:48:16
   |
48 | #[derive_where("Clone")]
   |                ^^^^^^^

error: `#[derive_where(..)` was already applied to this item before, this occurs when using a qualified path for any `#[derive_where(..)`s except the first
  --> tests/ui/item.rs:51:1
   |
51 | #[derive_where(Clone)]
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `derive_where` (in Nightly builds, run with -Z macro-backtrace for more info)
